[gd_scene load_steps=39 format=3 uid="uid://cpdu42h25sfri"]

[ext_resource type="Script" path="res://scripts/tank-components/Tank.gd" id="1_g5diw"]
[ext_resource type="PackedScene" uid="uid://bjbp1eyywcerx" path="res://scenes/tanks/player-bars.tscn" id="2_x174s"]
[ext_resource type="Texture2D" uid="uid://b3rx5mjjudhk3" path="res://assets/sprites/tanks/starter/starter-core-1.png" id="3_iemwg"]
[ext_resource type="Texture2D" uid="uid://bnviddut5e4a5" path="res://assets/sprites/tanks/starter/rapid-fire-barrel.png" id="4_pjl0l"]
[ext_resource type="Texture2D" uid="uid://dcjdc5nbekliy" path="res://assets/sprites/ui/tank-generic-bar.png" id="5_8ngh0"]
[ext_resource type="Script" path="res://scripts/tank-components/ComponentList.gd" id="6_b4kjq"]
[ext_resource type="Script" path="res://scripts/tank-components/MovementBasic.gd" id="7_4wamv"]
[ext_resource type="Script" path="res://scripts/tank-components/DashBasic.gd" id="8_fwt6g"]
[ext_resource type="Script" path="res://scripts/tank-components/StatsBasic.gd" id="9_vhb5k"]
[ext_resource type="PackedScene" uid="uid://cjxqex8nwxfk0" path="res://scenes/tanks/starter-interface.tscn" id="10_w6lgk"]
[ext_resource type="Script" path="res://scripts/tank-components/ShootingRapid.gd" id="11_86cp1"]
[ext_resource type="PackedScene" uid="uid://dbdruvih6st8j" path="res://scenes/tanks/starter/other/basic-bullet.tscn" id="12_42gbe"]
[ext_resource type="Script" path="res://scripts/tank-components/DeathBasic.gd" id="13_e7gmb"]
[ext_resource type="PackedScene" uid="uid://dkuuvwgfdon5r" path="res://scenes/spectator.tscn" id="14_ysvxu"]
[ext_resource type="PackedScene" uid="uid://blyxbp5brb462" path="res://scenes/graphics/player-explosion.tscn" id="15_sxpo1"]
[ext_resource type="Texture2D" uid="uid://v1h867arh4l5" path="res://assets/sprites/light.png" id="16_dsgay"]
[ext_resource type="PackedScene" uid="uid://6p84ixeqpp0f" path="res://scenes/tanks/starter/other/tank-trail.tscn" id="17_x2ref"]
[ext_resource type="PackedScene" uid="uid://v0gryapwl2rt" path="res://scenes/graphics/damage-particle.tscn" id="18_1ng3t"]
[ext_resource type="PackedScene" uid="uid://dc1vcm54gphhw" path="res://scenes/graphics/shockwave.tscn" id="19_ky4ua"]
[ext_resource type="Script" path="res://scripts/helper-components/Shake2D.gd" id="20_dttwv"]
[ext_resource type="AudioStream" uid="uid://bvtfshg87bfkl" path="res://assets/audio/tanks/starter/assault-shot.mp3" id="21_bg2q1"]
[ext_resource type="Script" path="res://scripts/helper-components/Audio2D.gd" id="22_id65v"]
[ext_resource type="AudioStream" uid="uid://db41fnatc8fwa" path="res://assets/audio/tanks/player-dash-1.mp3" id="23_bafj3"]
[ext_resource type="AudioStream" uid="uid://b08cew7xnwfqi" path="res://assets/audio/tanks/player-dash-2.mp3" id="24_qtcll"]
[ext_resource type="AudioStream" uid="uid://c7v7qyq56nm4o" path="res://assets/audio/tanks/player-dash-3.mp3" id="25_ivpkn"]
[ext_resource type="AudioStream" uid="uid://db0ckwnvk7vmh" path="res://assets/audio/tanks/player-damage-1.mp3" id="26_yjvbw"]
[ext_resource type="AudioStream" uid="uid://essypfdqc73m" path="res://assets/audio/tanks/player-damage-2.mp3" id="27_grr06"]
[ext_resource type="AudioStream" uid="uid://jriq00fwc1ui" path="res://assets/audio/tanks/player-damage-3.mp3" id="28_7j6dr"]
[ext_resource type="AudioStream" uid="uid://br8extpl5yukj" path="res://assets/audio/tanks/player-give-up.mp3" id="29_8bc7o"]

[sub_resource type="Animation" id="Animation_ilcse"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TankSprite/Node2D/BarrelRight:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(55, -140)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TankSprite/Node2D/BarrelRight:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TankSprite/Node2D/BarrelLeft:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-60, -140)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TankSprite/Node2D/BarrelLeft:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TankSprite/Node2D/BarrelRight/CooldownRight:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.619337, 0.857355)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("TankSprite/Node2D/BarrelLeft/CooldownLeft:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.619337, 0.857356)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("TankSprite:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_l46qf"]
resource_name = "shoot_left"
length = 0.18
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TankSprite/Node2D/BarrelLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.18),
"transitions": PackedFloat32Array(0.329877, 1),
"update": 0,
"values": [Vector2(-60, -137.5), Vector2(-60, -140)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TankSprite/Node2D/BarrelLeft:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.18),
"transitions": PackedFloat32Array(0.329877, 1),
"update": 0,
"values": [Vector2(1.134, 0.7), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TankSprite/Node2D/BarrelRight/CooldownRight:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.18),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 0.857), Vector2(0.619337, 0.857355)]
}

[sub_resource type="Animation" id="Animation_7mv10"]
resource_name = "shoot_right"
length = 0.18
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TankSprite/Node2D/BarrelRight:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.18),
"transitions": PackedFloat32Array(0.31864, 1),
"update": 0,
"values": [Vector2(55, -137.5), Vector2(55, -140)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TankSprite/Node2D/BarrelRight:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.18),
"transitions": PackedFloat32Array(0.31864, 1),
"update": 0,
"values": [Vector2(1.134, 0.7), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TankSprite/Node2D/BarrelLeft/CooldownLeft:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.18),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 0.857), Vector2(0.619337, 0.857356)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ebg0v"]
_data = {
"RESET": SubResource("Animation_ilcse"),
"shoot_left": SubResource("Animation_l46qf"),
"shoot_right": SubResource("Animation_7mv10")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_m8dbk"]
radius = 35.0

[sub_resource type="Animation" id="Animation_x37e6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TankSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6mmyr"]
resource_name = "damage"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TankSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7jurx"]
resource_name = "death"
length = 0.2
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TankSprite:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14, 0.16, 0.18),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0lit1"]
_data = {
"RESET": SubResource("Animation_x37e6"),
"damage": SubResource("Animation_6mmyr"),
"death": SubResource("Animation_7jurx")
}

[node name="Assault" type="CharacterBody2D" node_paths=PackedStringArray("component_container", "core_sprite", "sprite_node") groups=["tank"]]
script = ExtResource("1_g5diw")
tank_name = "Assault"
username = "Silly Billy"
core_tier = 2
default_zoom = 1.3
component_container = NodePath("Components")
core_sprite = NodePath("TankSprite/Core")
sprite_node = NodePath("TankSprite")

[node name="PlayerBars" parent="." node_paths=PackedStringArray("stats") instance=ExtResource("2_x174s")]
offset_left = -76.0
offset_top = -74.0
offset_right = -76.0
offset_bottom = -74.0
pivot_offset = Vector2(76, 74)
stats = NodePath("../Components/StatsBasic")

[node name="TankSprite" type="Node2D" parent="."]

[node name="Core" type="Sprite2D" parent="TankSprite"]
scale = Vector2(0.351487, 0.351487)
texture = ExtResource("3_iemwg")

[node name="ShootOriginLeft" type="Node2D" parent="TankSprite"]
position = Vector2(-12, -64)

[node name="ShootOriginRight" type="Node2D" parent="TankSprite"]
position = Vector2(11, -64)

[node name="Node2D" type="Node2D" parent="TankSprite"]
z_index = -1
scale = Vector2(0.2, 0.2)

[node name="BarrelRight" type="Sprite2D" parent="TankSprite/Node2D"]
show_behind_parent = true
position = Vector2(55, -140)
texture = ExtResource("4_pjl0l")
offset = Vector2(0, -100)

[node name="CooldownRight" type="Sprite2D" parent="TankSprite/Node2D/BarrelRight"]
modulate = Color(0.332881, 0.332881, 0.332881, 1)
position = Vector2(0, -190)
rotation = 1.57079
scale = Vector2(0.619337, 0.857355)
texture = ExtResource("5_8ngh0")
offset = Vector2(104, 0)

[node name="BarrelLeft" type="Sprite2D" parent="TankSprite/Node2D"]
show_behind_parent = true
position = Vector2(-60, -140)
texture = ExtResource("4_pjl0l")
offset = Vector2(0, -100)

[node name="CooldownLeft" type="Sprite2D" parent="TankSprite/Node2D/BarrelLeft"]
modulate = Color(0.333333, 0.333333, 0.333333, 1)
position = Vector2(0, -190)
rotation = 1.57079
scale = Vector2(0.619337, 0.857356)
texture = ExtResource("5_8ngh0")
offset = Vector2(104, 0)

[node name="Components" type="Node" parent="."]
script = ExtResource("6_b4kjq")

[node name="MovementBasic" type="Node" parent="Components" node_paths=PackedStringArray("tank_sprite", "tank")]
script = ExtResource("7_4wamv")
speed = 600.0
acceleration = 2000.0
tank_sprite = NodePath("../../TankSprite")
tank = NodePath("../..")

[node name="DashBasic" type="Node" parent="Components" node_paths=PackedStringArray("movement", "tank_stats", "audio_player", "dash_shake", "dash_shockwave", "tank")]
script = ExtResource("8_fwt6g")
movement = NodePath("../MovementBasic")
tank_stats = NodePath("../StatsBasic")
audio_player = NodePath("../../DashAudio")
dash_shake = NodePath("../../Shake2D")
dash_shockwave = NodePath("../../DashShockwave")
tank = NodePath("../..")

[node name="StatsBasic" type="Node" parent="Components" node_paths=PackedStringArray("animation_player", "damage_sounds", "damage_particle", "tank")]
script = ExtResource("9_vhb5k")
animation_player = NodePath("../../DamageAnimation")
damage_sounds = NodePath("../../HurtSound")
damage_particle = NodePath("../../HurtParticle")
tank = NodePath("../..")

[node name="CanvasLayer" type="CanvasLayer" parent="Components/StatsBasic"]

[node name="TankInterface" parent="Components/StatsBasic/CanvasLayer" node_paths=PackedStringArray("stats") instance=ExtResource("10_w6lgk")]
visible = false
stats = NodePath("../..")

[node name="ShootingRapid" type="Node" parent="Components" node_paths=PackedStringArray("tank_sprite", "animation_player", "origin_left", "origin_right", "delay", "audio_player", "tank")]
script = ExtResource("11_86cp1")
tank_sprite = NodePath("../../TankSprite")
animation_player = NodePath("../../AnimationPlayer")
origin_left = NodePath("../../TankSprite/ShootOriginLeft")
origin_right = NodePath("../../TankSprite/ShootOriginRight")
delay = NodePath("Delay")
audio_player = NodePath("../../ShootSound")
bullet_scene = ExtResource("12_42gbe")
bullet_speed = 600.0
bullet_size = 0.85
bullet_damage = 10.0
tank = NodePath("../..")

[node name="Delay" type="Timer" parent="Components/ShootingRapid"]
wait_time = 0.2

[node name="DeathBasic" type="Node" parent="Components" node_paths=PackedStringArray("stats", "animation_player", "predeath_sound", "tank")]
script = ExtResource("13_e7gmb")
stats = NodePath("../StatsBasic")
spectator_scene = ExtResource("14_ysvxu")
animation_player = NodePath("../../DamageAnimation")
death_scene = ExtResource("15_sxpo1")
predeath_sound = NodePath("../../GiveUpSound")
tank = NodePath("../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_ebg0v")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_m8dbk")
metadata/_edit_lock_ = true

[node name="PointLight2D" type="PointLight2D" parent="."]
scale = Vector2(1.76172, 1.51172)
energy = 0.3
shadow_enabled = true
texture = ExtResource("16_dsgay")
metadata/_edit_lock_ = true

[node name="TankTrail" parent="." node_paths=PackedStringArray("tank") instance=ExtResource("17_x2ref")]
tank = NodePath("..")

[node name="HurtParticle" parent="." instance=ExtResource("18_1ng3t")]
emitting = false

[node name="DashShockwave" parent="." instance=ExtResource("19_ky4ua")]
visible = false
z_index = 5
z_as_relative = false
scale = Vector2(0.347177, 0.347177)
grow_speed = 4.0
fade_speed = 5.0

[node name="Shake2D" type="Marker2D" parent="."]
scale = Vector2(0.997009, 1)
script = ExtResource("20_dttwv")
shake_range = 1000
intensity = 3.0
intensity_decay = 15.0

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("21_bg2q1")
volume_db = -8.0
script = ExtResource("22_id65v")
pitch_range = 0.1

[node name="DashAudio" type="AudioStreamPlayer2D" parent="."]
script = ExtResource("22_id65v")
sounds = Array[AudioStream]([ExtResource("23_bafj3"), ExtResource("24_qtcll"), ExtResource("25_ivpkn")])
pitch_range = 0.05
external = true

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
script = ExtResource("22_id65v")
sounds = Array[AudioStream]([ExtResource("26_yjvbw"), ExtResource("27_grr06"), ExtResource("28_7j6dr")])
pitch_range = 0.02

[node name="GiveUpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("29_8bc7o")
script = ExtResource("22_id65v")

[node name="DamageAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0lit1")
}

[connection signal="timeout" from="Components/ShootingRapid/Delay" to="Components/ShootingRapid" method="_on_delay_timeout"]
